drastically simplify NSIS builds